<resources>
    <string name="app_name">ComposeSignup</string>
    <string name="password_length">Atleast 8 characters</string>
    <string name="name_hint">Your Name*</string>
    <string name="email_hint">Enter Your Email*</string>
    <string name="password_hint">Enter Your Password*</string>
    <string name="password_confirm_hint">Confirm Your Password*</string>
    <string name="terms_and_conditions">By agreeing to the terms and conditions,you are entering legally binding contract with the service provider.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="something_went_wrong_try_later">Something went wrong! try again later.</string>
    <string name="check_your_internet">Please check your internet connection!</string>
    <string name="welcome_text">Welcome to Tasktugas</string>
    <string name="onboard_description">Signup or login below to manage your project,tasks and productivity</string>
    <string name="app_logo">app_logo</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_description">Enter your email account to reset password</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="forgot_password_image_description">forgot password desc</string>
    <string name="intro_screen_title">TaskForce</string>
</resources>