...
            },
            visualTransformation = PasswordVisualTransformation()
        ) {
            uiAction.invoke(LoginUiAction.Password(it))
        }
        Spacer(modifier = modifier.height(12.dp))
        Text(text = "Forgot Password?",
            style = MaterialTheme.typography.labelMedium,
            modifier = modifier.clickable {
                uiAction.invoke(LoginUiAction.ForgotPassword)
            })
        Spacer(modifier = modifier.weight(1f))
        ComposeSignUpButton(
...
